# burp

./: .gitignore  CMakeLists.txt  JOURNAL.md  LICENSE  README.md  build_main.sh  build_test.sh  valgrind
.circleci/: config.yml
.circleci/images/: Dockerfile
cmake/: CMakeCache.txt  CTestTestfile.cmake  FindCheck.cmake  Makefile  cmake_install.cmake
cmake/src/: Makefile  burp  cmake_install.cmake
cmake/src/model/: Makefile  cmake_install.cmake
cmake/src/view/: Makefile  cmake_install.cmake
cmake/tests/: CTestTestfile.cmake  Makefile  check_file_reader  cmake_install.cmake
doc/: config-file  dir.doc  doxygen_index.md
doc/grammar/: grammar.ebnf
doc/html/: md_doxygen_index.html  pages.html
doc/html/search/: all_0.js  pages_0.js
doc/latex/: md_doxygen_index.tex  refman.tex
docs/: config-file
docs/doxygen/html/: CMakeLists_8txt.html  arene_8c.html  arene_8c__incl.md5  arene_8h__incl.md5  arene_8h_a0902226258f03cca13b39b30bed27515_cgraph.map  classes.html  commands_8c.html  commands_8c_a022510dabe74f021f80fa02f1d02b68c_cgraph.map  commands_8c_a7966c0b69d30ad6b13cad1b13b3a643d_cgraph.md5  commands_8c_a906d8acbe869697e7fb763aa7e47cf68_cgraph.md5  commands_8h__incl.map  commands_8h_a115f5529bc21b9cc3d3b8343a605d557_cgraph.map  commands_8h_a3e82b79397002abb644930d8eaa9a8ed_cgraph.map  commands_8h_a8340f4029c8f2e8cb88e43cc011e0d29_cgraph.md5  commands_8h_a8db0c077ec94bf546c42cfc4cb318c7e_cgraph.map  commands_8h_source.html  cycle_8c__incl.md5  define_8h.html  define_8h__dep__incl.md5  define_8h_source.html  (+70 more)
docs/grammar/: diagram.xhtml  grammar.ebnf
docs/html/: CMakeLists_8txt.html  annotated.html  arene_8c.html  arene_8c__incl.map  arene_8c__incl.md5  arene_8c_a5e541140a19e27a1c8cada663367b501_cgraph.map  arene_8c_a7ac87b6e3bfae333a36be39b2f245d65_cgraph.map  arene_8h.html  arene_8h__dep__incl.map  arene_8h__dep__incl.md5  arene_8h__incl.map  arene_8h__incl.md5  arene_8h_a0902226258f03cca13b39b30bed27515_cgraph.md5  arene_8h_a5e541140a19e27a1c8cada663367b501_cgraph.md5  arene_8h_a7ac87b6e3bfae333a36be39b2f245d65_cgraph.md5  arene_8h_source.html  classes.html  commands_8c.html  commands_8c__incl.map  commands_8c__incl.md5  commands_8c_a022510dabe74f021f80fa02f1d02b68c_cgraph.md5  commands_8c_a13cf07b919b4f0b804e5b9122fde8461_cgraph.map  commands_8c_a7246611742d62d264de2090481bbbb3f_cgraph.md5  commands_8c_a8fa6f51d1ff91ba018cc8eac2e0466ec_cgraph.map  commands_8c_a8fa6f51d1ff91ba018cc8eac2e0466ec_cgraph.md5  commands_8c_a9fcbe4518ef7cee1509025b612f722d4_cgraph.map  commands_8c_a9fcbe4518ef7cee1509025b612f722d4_cgraph.md5  commands_8c_add88c8c947f8d99950f3b3c1556eca87_cgraph.md5  commands_8c_adfdb1b58319f7aff0c109bc1340f7761_cgraph.map  commands_8c_af41f05b8bf054d5b10381407101678fe_cgraph.map  commands_8h.html  commands_8h__dep__incl.map  commands_8h__dep__incl.md5  commands_8h__incl.map  commands_8h__incl.md5  commands_8h_a0b371daff579f43a604d992551835cef_cgraph.map  commands_8h_a0b371daff579f43a604d992551835cef_cgraph.md5  commands_8h_a115f5529bc21b9cc3d3b8343a605d557_cgraph.md5  commands_8h_a13cf07b919b4f0b804e5b9122fde8461_cgraph.md5  commands_8h_a3e82b79397002abb644930d8eaa9a8ed_cgraph.md5  (+218 more)
rendu/: REPORT_CP6.docx  ~$PORT_CP6.docx
scripts/: avoider  ninja  shooter  waiter
src/: CMakeLists.txt  Makefile  define.h  game.c  game.h  main.c
src/controler/: CMakeLists.txt  controler.c  controler.h
src/controller/: CMakeLists.txt  controller.c  controller.h
src/model/: CMakeLists.txt  cycle.c  cycle.h  game.c
src/view/: CMakeLists.txt  Makefile  test.c  ui.c  ui.h
tests/: CMakeLists.txt  check_check.h  check_file_reader.c  check_header.h  check_main.c
tests/check_file_reader/: CMakeLists.txt  check_file_reader.c  check_file_reader.h  check_file_reader.h.in
tests/check_file_reader/test_files/: achieve_test.txt  f_bigint.txt  f_expression.txt  f_goto.txt  f_line.txt  f_peek_tobig.txt  f_unknown.txt  failure_test.txt  s_cardinal_if.txt  s_cardinal_if_2.txt  s_gps_self.txt  s_poke_peek_wait.txt  s_rand_speed_engine.txt  s_shoot_distance_angle.txt  s_state_target.txt  w_gps_on_dead_robots.txt  w_memory_size.txt  w_negative_distance.txt  w_negative_waiting_time.txt  w_robot_number.txt
tests/check_game/: CMakeLists.txt  check_arena.c  check_commands.c  check_missiles.c  check_robot.c
(+162 files in other folders)
